<resources>
    <string name="app_name">Sempre Contigo</string>


    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="newRegisto">Registar</string>
    <string name="cancel">Cancelar</string>

    <string name="jogos">Jogos</string>
    <string name="farmaciaMap">Farmacias Perto de Si</string>
    <string name="foodDetails">Nutrição</string>
    <string name="mealDetails">Refeições</string>
    <string name="GerirMedicamentos">Medicamentos</string>
    <string name="RegistarTomas">Tomas</string>

    <string name="MedicamentosName">Nome do medicamento</string>
    <string name="Quantidade">Quantidade</string>
    <string name="PeriodoDeTempo">Dias em que toma a medicaçao:</string>
    <string name="dayStamp">Altura do dia que toma a madicaçao:</string>

    <string name="Segunda">Segunda</string>
    <string name="Terça">Terça</string>
    <string name="Quarta">Quarta</string>
    <string name="Quinta">Quinta</string>
    <string name="Sexta">Sexta</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>

    <string name="Manha">Manha</string>
    <string name="Almoço">Almoço</string>
    <string name="Tarde">Tarde</string>
    <string name="Jantar">Jantar</string>
    <string name="Noite">Noite</string>

    <string name="laticinios">Laticínios</string>
    <string name="ovo">Ovo</string>
    <string name="gluten">Glúten</string>
    <string name="grao">Grão</string>
    <string name="amendoim">Amendoim</string>
    <string name="frutosMar">Frutos do Mar</string>
    <string name="sesamo">Sésamo</string>
    <string name="marisco">Marisco</string>
    <string name="soja">Soja</string>
    <string name="sulfito">Sulfito</string>
    <string name="frutosSecos">Frutos Secos</string>
    <string name="trigo">Trigo</string>

    <string name="vegetariano">Vegetariano</string>
    <string name="vegan">Vegan</string>
    <string name="semGluten">Sem Glúten</string>


    <string-array name="hours">
        <item>00</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="min">
        <item>00</item>
        <item>30</item>

    </string-array>
    <string name="title_activity_farmacia_maps">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
