<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_medicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MedicamentosName" />

    <EditText
        android:id="@+id/editText_nameMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"

        android:hint="Insira o nome do medicamento" />

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/Quantidade" />

    <EditText
        android:id="@+id/editText_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Insira a quantidade" />

    <TextView
        android:id="@+id/periodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PeriodoDeTempo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spin_Hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/hours"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/hora"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="h"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/spin_Min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/min"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="m"
            android:textSize="30dp"
            android:paddingLeft="5dp"

            />

    </LinearLayout>

</LinearLayout>